qui_3_obj: atualizado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
             "comments": true,
             "strings": true
         },
-    }
+    },
+    "cSpell.words": [
+        "picômetros"
+    ]
 }
