--- a/setup.cfg
+++ b/setup.cfg
@@ -13,11 +13,10 @@ classifiers =
 packages =
     diagramador
 install_requires =
-    beautifulsoup4>=4
     black>=22
-    bs4>=0.0.1
-    python-frontmatter>=1
+    pydantic>=1.10
     pypandoc>=1.8
+    panflute>=2.3.0
 python_requires = >=3.9
 package_dir =
     =src
