--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ ls-R
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
