--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@ ls-R
 
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
-*.pdf
+**/test/*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
