--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = Diagramação de provas e simulados a partir de arquivos em markdo
 author = Gabriel Braun
 license = MIT
 license_file = LICENSE
-platforms = unix, linux, osx, cygwin, win32
+platforms = unix, linux
 classifiers =
     Programming Language :: Python :: 3.11
 
@@ -19,7 +19,7 @@ install_requires =
     pydantic>=2.4
     pypandoc_binary>=1.12
     psycopg2-binary>=2.9
-python_requires = >=3.9
+python_requires = >=3.11
 package_dir =
     =src
 zip_safe = no
