Refatoração + create.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,4 @@ zip_safe = no
 [options.entry_points]
 console_scripts =
     diagr = diagramador.bin.main:main
+    diagr-create = diagramador.bin.create:create
