--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ install_requires =
     pydantic>=2.4
     pypandoc_binary>=1.12
     psycopg2-binary>=2.9
+    CairoSVG>=2.7
 python_requires = >=3.11
 package_dir =
     =src
