--- a/setup.cfg
+++ b/setup.cfg
@@ -1,31 +1,38 @@
 [metadata]
-name = diagramador
-version = attr: diagramador.VERSION
+name = diagr
+version = attr: diagr.VERSION
 description = Diagramação de provas e simulados a partir de arquivos em markdown
 author = Gabriel Braun
 license = MIT
 license_file = LICENSE
 platforms = unix, linux
 classifiers =
-    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3
 
 [options]
-packages =
-    diagramador
+packages = find:
 install_requires =
     black>=22
     Jinja2>=3.1
     rich>=13.7
-    pydantic>=2.4
-    pypandoc_binary>=1.12
-    psycopg2-binary>=2.9
+    pydantic>=2.5
+    pypandoc>=1.12
+    psycopg2>=2.9
     CairoSVG>=2.7
-python_requires = >=3.11
-package_dir =
-    =src
-zip_safe = no
+
+[options.package_data]
+* =
+    *.j2
+    *.tex
+    *.sty
+    *.cls
+    *.lua
+    *.otf
+    *.ttf
+    *.cfg
+    *.latexmkrc
 
 [options.entry_points]
 console_scripts =
-    diagr = diagramador.bin.main:main
-    diagr-create = diagramador.bin.create:create
+    diagr = diagr.bin.main:main
+    diagr-create = diagr.bin.create:create
