--- a/diagr/bin/defaults.cfg
+++ b/diagr/bin/defaults.cfg
@@ -4,3 +4,4 @@ port = 5432
 database = hedgedoc
 user = hedgedoc
 password = password
+graphics_path = "/var/lib/docker/volumes/hedgedoc_uploads/_data/"
